chore(audit): don't use jaxb to create a base64 since dependency is no more there OOTB (#522)